--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <label for="">Position 8 :</label>
         <input class="position_data" type="number" name="" id="inp8">
       </div>
-      <h1 class="groups" id="groupA"> <b> Group A:</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupB"><b> Group B:</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupC"><b> Group C:</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupD"><b> Group D: </b><span>NaN</span> </h1>
-      <h1 class="groups" id="groupE"><b> Group E:</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupF"><b> Group F:</b> <span>NaN</span> </h1>
+      <h1 class="groups" id="groupA"><b>  A</b> <span>NaN</span> </h1>
+      <h1 class="groups" id="groupB"><b>  B</b> <span>NaN</span> </h1>
+      <h1 class="groups" id="groupC"><b>  C</b> <span>NaN</span> </h1>
+      <h1 class="groups" id="groupD"><b>  D </b><span>NaN</span> </h1>
+      <h1 class="groups" id="groupE"><b>  E</b> <span>NaN</span> </h1>
+      <h1 class="groups" id="groupF"><b>  F</b> <span>NaN</span> </h1>
     </div>
     <div class="output">
       <div class="">
