--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Airline</title>
+  <title>PW-4000 Engine</title>
 </head>
 
 <body>
-  <h2>Tire calculator</h2>
+  <h2>PW-4000 Engine</h2>
   <section>
     <div class="tire">
-      <img src="images/2030bbf6-3931-4619-9330-2430c36eb801.jpg" alt="">
+      <button class="reset" name="button" onclick="reset();">
+        <img src="images/reset.png" alt="">
+      </button>
+      <img src="images/engine-c.png" alt="">
       <div class="inputs" id="p1">
         <label for="">Position 1 :</label>
         <input class="position_data" type="number" name="" id="inp1">
@@ -46,24 +49,35 @@
         <label for="">Position 8 :</label>
         <input class="position_data" type="number" name="" id="inp8">
       </div>
-      <h1 class="groups" id="groupA"><b>  A</b> <span>NaN</span> </h1>
+
+      <div class="lines" id="line1"></div>
+      <div class="lines" id="line2"></div>
+      <div class="lines" id="line3"></div>
+      <div class="lines" id="line4"></div>
+      <div class="lines" id="line5"></div>
+      <div class="lines" id="line6"></div>
+      <div class="lines" id="line7"></div>
+      <div class="lines" id="line8"></div>
+      <!-- <h1 class="groups" id="groupA"><b>  A</b> <span>NaN</span> </h1>
       <h1 class="groups" id="groupB"><b>  B</b> <span>NaN</span> </h1>
       <h1 class="groups" id="groupC"><b>  C</b> <span>NaN</span> </h1>
       <h1 class="groups" id="groupD"><b>  D </b><span>NaN</span> </h1>
       <h1 class="groups" id="groupE"><b>  E</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupF"><b>  F</b> <span>NaN</span> </h1>
-    </div>
-    <div class="output">
-      <div class="">
-        <!-- <h1 class="groups" id="groupA"> <b> Group A:</b> <span>NaN</span> </h1>
-        <h1 class="groups" id="groupB"><b> Group B:</b> <span>NaN</span> </h1>
-        <h1 class="groups" id="groupC"><b> Group C:</b> <span>NaN</span> </h1>
-        <h1 class="groups" id="groupD"><b> Group D: </b><span>NaN</span> </h1>
-        <h1 class="groups" id="groupE"><b> Group E:</b> <span>NaN</span> </h1>
-        <h1 class="groups" id="groupF"><b> Group F:</b> <span>NaN</span> </h1> -->
-      </div>
+      <h1 class="groups" id="groupF"><b>  F</b> <span>NaN</span> </h1> -->
 
+      <div class="output">
+        <div class="">
+          <h1 class="groups" id="groupA"> <b> Group A:</b> <span>NaN</span> </h1>
+          <h1 class="groups" id="groupB"><b> Group B:</b> <span>NaN</span> </h1>
+          <h1 class="groups" id="groupC"><b> Group C:</b> <span>NaN</span> </h1>
+          <h1 class="groups" id="groupD"><b> Group D: </b><span>NaN</span> </h1>
+          <h1 class="groups" id="groupE"><b> Group E:</b> <span>NaN</span> </h1>
+          <h1 class="groups" id="groupF"><b> Group F:</b> <span>NaN</span> </h1>
+        </div>
+
+      </div>
     </div>
+
   </section>
 
   <script type="text/javascript" src="js/main.js">
