--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button class="reset" name="button" onclick="reset();">
         <img src="images/reset.png" alt="">
       </button>
-      <img src="images/engine-c.png" alt="">
+      <img id="engine-img" src="images/engine-c.png" alt="">
       <div class="inputs" id="p1">
         <label for="">Position 1 :</label>
         <input class="position_data" type="number" name="" id="inp1">
@@ -65,20 +65,26 @@
       <h1 class="groups" id="groupE"><b>  E</b> <span>NaN</span> </h1>
       <h1 class="groups" id="groupF"><b>  F</b> <span>NaN</span> </h1> -->
 
-      <div class="output">
-        <div class="">
-          <h1 class="groups" id="groupA"> <b> Group A:</b> <span>NaN</span> </h1>
-          <h1 class="groups" id="groupB"><b> Group B:</b> <span>NaN</span> </h1>
-          <h1 class="groups" id="groupC"><b> Group C:</b> <span>NaN</span> </h1>
-          <h1 class="groups" id="groupD"><b> Group D: </b><span>NaN</span> </h1>
-          <h1 class="groups" id="groupE"><b> Group E:</b> <span>NaN</span> </h1>
-          <h1 class="groups" id="groupF"><b> Group F:</b> <span>NaN</span> </h1>
-        </div>
 
-      </div>
     </div>
+    <div class="output" id="out1">
+      <div class="">
+        <h1 class="groups" id="groupA"> <b> Group A:</b> <span></span> </h1>
+        <h1 class="groups" id="groupB"><b> Group B:</b> <span></span> </h1>
+        <h1 class="groups" id="groupC"><b> Group C:</b> <span></span> </h1>
+      </div>
 
+    </div>
+    <div class="output" id="out2">
+      <div class="">
+        <h1 class="groups" id="groupD"><b> Group D: </b><span></span> </h1>
+        <h1 class="groups" id="groupE"><b> Group E:</b> <span></span> </h1>
+        <h1 class="groups" id="groupF"><b> Group F:</b> <span></span> </h1>
+      </div>
+
+    </div>
   </section>
+  <footer>Copyright&copy;Calculator</footer>
 
   <script type="text/javascript" src="js/main.js">
 
