--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 </head>
 
 <body>
-  <h2>PW-4000 Engine</h2>
+
   <section>
     <div class="tire">
+      <h2>
+        <span style="color:rgba(77,20,140,1)">Tech</span>
+        <span style="color:rgba(255,102,0,1)">Ops</span>
+        Training
+        <br>
+        PW-4000 Engine <br>
+      Rub Strip Calculator
+    </h2>
       <button class="reset" name="button" onclick="reset();">
         <img src="images/reset.png" alt="">
       </button>
+      <a href="www.youtube.com" class="info-btn">
+        <img src="images/question-mark.png" alt="">
+      </a>
       <img id="engine-img" src="images/engine-c.png" alt="">
       <div class="inputs" id="p1">
         <label for="">Position 1 :</label>
@@ -58,33 +69,32 @@
       <div class="lines" id="line6"></div>
       <div class="lines" id="line7"></div>
       <div class="lines" id="line8"></div>
-      <!-- <h1 class="groups" id="groupA"><b>  A</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupB"><b>  B</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupC"><b>  C</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupD"><b>  D </b><span>NaN</span> </h1>
-      <h1 class="groups" id="groupE"><b>  E</b> <span>NaN</span> </h1>
-      <h1 class="groups" id="groupF"><b>  F</b> <span>NaN</span> </h1> -->
+      <div class="output">
+        <div class="">
+          <h1 class="groups" id="groupA"> <b> Group A:</b> <span></span> </h1>
+          <h1 class="groups" id="groupB"><b> Group B:</b> <span></span> </h1>
+          <h1 class="groups" id="groupC"><b> Group C:</b> <span></span> </h1>
+          <h1 class="groups" id="groupD"><b> Group D: </b><span></span> </h1>
+          <h1 class="groups" id="groupE"><b> Group E:</b> <span></span> </h1>
+          <h1 class="groups" id="groupF"><b> Group F:</b> <span></span> </h1>
+        </div>
+
+      </div>
 
 
     </div>
-    <div class="output" id="out1">
+    <!-- <div class="output">
       <div class="">
         <h1 class="groups" id="groupA"> <b> Group A:</b> <span></span> </h1>
         <h1 class="groups" id="groupB"><b> Group B:</b> <span></span> </h1>
         <h1 class="groups" id="groupC"><b> Group C:</b> <span></span> </h1>
-      </div>
-
-    </div>
-    <div class="output" id="out2">
-      <div class="">
         <h1 class="groups" id="groupD"><b> Group D: </b><span></span> </h1>
         <h1 class="groups" id="groupE"><b> Group E:</b> <span></span> </h1>
         <h1 class="groups" id="groupF"><b> Group F:</b> <span></span> </h1>
       </div>
 
-    </div>
+    </div> -->
   </section>
-  <footer>Copyright&copy;Calculator</footer>
 
   <script type="text/javascript" src="js/main.js">
 
