--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <section>
     <div class="tire">
       <h2>
-        <span style="color:rgba(77,20,140,1)">Tech</span>
-        <span style="color:rgba(255,102,0,1)">Ops</span>
+        <span style="color:rgba(77,20,140,1)">Tech</span><span style="color:rgba(255,102,0,1)">Ops</span>
         Training
         <br>
         PW-4000 Engine <br>
