--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <img src="images/question-mark.png" alt="">
       </a>
       <img id="engine-img" src="images/engine-c.png" alt="">
+      <img class="logo" src="images/FedEx.svg" alt="">
       <div class="inputs" id="p1">
         <label for="">Position 1 :</label>
         <input class="position_data" type="number" name="" id="inp1">
